2007-01-26  Tom Tromey  <tromey@redhat.com>

	* tools/gnu/classpath/tools/javah/FieldHelper.java (print): Print
	'volatile' after field type.

2007-01-26  Chris Burdess  <dog@gnu.org>

	Fixes #30597
	* gnu/xml/dom/DomDocumentBuilder.java: Throw IOException where cause
	  of LSException is an IOException.
	* gnu/xml/dom/ls/DomLSParser.java,
	  gnu/xml/stream/SAXParser.java: Ensure coalescing feature is set
	  correctly during LS parsing.

2007-01-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/PersistentMBean.java:
	New file.
	
2007-01-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/AttributeChangeNotificationFilter.java:
	Correct typo.
	* javax/management/NotificationFilterSupport.java:
	New file.
	
2007-01-21  Mark Wielaard  <mark@klomp.org>

	* java/security/SecureClassLoader.java (defineClass): Method returns
	Class<?>.
	* java/security/SignatureSpi.java (engineUpdate(ByteBuffer):
	Does not throw SignatureException. Chain SignatureException inside
	IllegalStateException.

2007-01-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/NotificationBroadcasterSupport.java:
	New file.
	
2007-01-20  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* java/text/DecimalFormat.java(parse): Corrected the ParsePosition
	settings.

2007-01-20  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* java/text/SimpleDateFormat(parse): Corrected the usage of
		NumberFormat.

2007-01-20  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	Fixes bug #30488
	* native/jni/native-lib/cpnet.c(SOCKET_NOSIGNAL): Deleted,
	(setsockopt_NOSIGPIPE): New function,
	(cpnet_send): Corrected the option setting to send(),
	(cpnet_sendTo): Corrected the option setting to sendto(). 

2007-01-19  Marco Trudel  <mtrudel@gmx.ch>

	* java/util/Arrays.java (binarySearch): Change comparison order.

2007-01-17  Keith Seitz  <keiths@redhat.com>

	* gnu/classpath/jdwp/events/filters/StepFilter.java:
	Update javadoc. 
	(matches): Implement.
